--- a/src/Components/AboutMe.css
+++ b/src/Components/AboutMe.css
@@ -1,9 +1,15 @@
+.aboutme {
+    display: flex; 
+    justify-content: center;
+    align-content: center;
+    
+}
 .myname {
     display: flex; 
     justify-content: center;
     font-size: 50px; 
     /* font-family: Proxima;  */
-    margin-top: 20px; 
+    margin-top: 200px; 
     color: #122620;
     padding: 20px; 
 }
