--- a/src/Components/ProjectsLink.css
+++ b/src/Components/ProjectsLink.css
@@ -1,3 +1,15 @@
+.booknook-container {
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px; 
+    padding: 20px; 
+    font-size: 20px; 
+    
+}
+
+
 .booknook-title {
     display: flex; 
     justify-content: center;
@@ -8,3 +20,4 @@
     padding: 20px; 
     gap: 20px; 
 }
+
