--- a/src/Components/Project.css
+++ b/src/Components/Project.css
@@ -23,23 +23,47 @@
     text-decoration: none;
     display: flex; 
     flex-direction: column;
-    flex-direction: row;
     gap: 20px; 
+    width: 500px; 
     cursor: pointer;
-    font-size: 25px;
+    /* transition: color ease; */
+    color:#122620
 }
 
-/* .booknook-cont a:hover{
-    background-color: #D6AD60;
-    color: #F4EBD0
-} */
+.booknook-name {
+    color: #122620;
+    transition: color ease; 
+}
 
-
-.booknook {
+.title-cont {
     display: flex;
     flex-direction: row;
     gap: 20px; 
+    margin-top: 20px; 
     color: #122620;
+    transition: color ease; 
+}
+
+.booknook-cont a:hover {
+    background-color: #122620;
+    color: #D6AD60; 
+}
+
+.booknook-cont a:hover 
+.booknook-name {
+    color: #D6AD60;
+}
+
+.content-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.tech-cont {
+    margin-left: 20px
 }
 
 .booknook-pic {
@@ -47,4 +71,10 @@
     width: 450px; 
     height: auto; 
 
+}
+
+.book-ptag {
+    margin-top: 0px; 
+    display: flex; 
+    justify-content: center;
 }
