--- a/src/Components/ProjectsLink.css
+++ b/src/Components/ProjectsLink.css
@@ -1,23 +1,42 @@
-.booknook-container {
-    display: flex; 
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 20px; 
-    padding: 20px; 
-    font-size: 20px; 
-    
-}
-
 
 .booknook-title {
     display: flex; 
     justify-content: center;
     font-size: 50px; 
     margin-top: 30px; 
-    margin-bottom: 30px;
     color: #122620;
     padding: 20px; 
     gap: 20px; 
+    margin-bottom: 30px; 
 }
+
+.booknook-container {
+    display: flex; 
+    flex-direction: column;
+    justify-content: flex-start;
+    /* align-items: center; */
+    margin-top: 20px; 
+    padding: 0 150px; 
+    /* padding-left: 150px;
+    padding-right: 150px; */
+    /* padding: 200px;  */
+    font-size: 20px; 
+    
+}
+
+.subtitles {
+    display: flex; 
+    flex-direction: row;
+    font-size: 30px; 
+    color:#122620;
+    margin-top: 20px; 
+    gap: 20px; 
+}
+
+
+.tech-cont {
+    margin: 0 auto;
+    margin-left: 0; 
+}
+
 
