--- a/src/Components/ProjectsLink.css
+++ b/src/Components/ProjectsLink.css
@@ -37,6 +37,31 @@
 .tech-cont {
     margin: 0 auto;
     margin-left: 0; 
+    margin-bottom: 20px; 
+}
+
+.booknook-button {
+    background-color: #122620; 
+    margin-bottom: 20px; 
+    
+    width: 240px;
+    text-align: center;
+}
+.booknook-button a {
+    text-decoration: none;
+    padding: 10px; 
+    color: #D6AD60;
+    display: block;
+    text-decoration: none;
+    opacity: 0.7;
+    transition: color ease;
+    cursor: pointer;
+}
+
+.booknook-button a:hover {
+    background-color: #D6AD60; 
+    color: #122620;
+    
 }
 
 
